--- a/pom.xml
+++ b/pom.xml
@@ -4,49 +4,34 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>emanondev.deepdungeons</groupId>
 	<artifactId>DeepDungeons</artifactId>
-	<version>1.0</version>
+	<version>3.0</version>
+	<packaging>jar</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<dir>C:\Users\utente\Desktop\build</dir>
 	</properties>
+
 	<build>
+		<finalName>${project.name}-${project.version}</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<outputFileName>${project.artifactId>-${project.version></outputFileName>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.0.2</version>
-				<executions>
-					<execution>
-						<id>copy-files-on-build</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${dir}</outputDirectory>
-							<resources>
-								<resource>
-									<directory>target</directory>
-									<include>*.jar</include>
-									<filtering>false</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
+
 	<repositories>
 		<!-- Party -->
 		<repository>
@@ -138,7 +123,7 @@
 		<dependency>
 			<groupId>emanondev.itemedit</groupId>
 			<artifactId>ItemEdit</artifactId>
-			<version>2.17</version>
+			<version>2.20a</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- MythicMobs -->
@@ -153,6 +138,13 @@
 			<groupId>com.sk89q.worldedit</groupId>
 			<artifactId>worldedit-bukkit</artifactId>
 			<version>7.2.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- DeepCore -->
+		<dependency>
+			<groupId>emanondev.core</groupId>
+			<artifactId>DeepCore</artifactId>
+			<version>3.1</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
