--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
         <dependency>
             <groupId>emanondev.itemedit</groupId>
             <artifactId>ItemEdit</artifactId>
-            <version>2.20a</version>
+            <version>2.20</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
